Vertical align fix for drip form

--- a/web/app/themes/ecommerce-influence/src/css/blocks/popupForm.scss
+++ b/web/app/themes/ecommerce-influence/src/css/blocks/popupForm.scss
@@ -37,7 +37,7 @@
 .popUpTemplate__formBlock-form{
 	margin-top: 20px;
 	margin-left: 3%;
-
+    vertical-align: middle;
 	width: 46%;
 }
 .popUpTemplate__formBlock-image{
